--- a/package/package.json
+++ b/package/package.json
@@ -17,19 +17,23 @@
     "@mui/lab": "5.0.0-alpha.170",
     "@mui/material": "5.15.15",
     "@tabler/icons-react": "2.30.0",
+    "@tailwindcss/postcss": "^4.0.0",
     "@types/node": "20.4.5",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
     "apexcharts": "3.41.1",
+    "autoprefixer": "^10.4.20",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "lodash": "4.17.21",
     "next": "14.2.3",
+    "postcss": "^8.5.1",
     "react": "18.2.0",
     "react-apexcharts": "1.4.1",
     "react-dom": "18.2.0",
     "react-helmet-async": "1.3.0",
     "react-mui-sidebar": "^1.3.8",
+    "tailwindcss": "^4.0.0",
     "typescript": "5.1.6"
   },
   "devDependencies": {
