--- a/package/package.json
+++ b/package/package.json
@@ -26,6 +26,7 @@
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "lodash": "4.17.21",
+    "mysql2": "^3.12.0",
     "next": "14.2.3",
     "postcss": "^8.5.1",
     "react": "18.2.0",
