--- a/package/package.json
+++ b/package/package.json
@@ -23,6 +23,7 @@
     "@types/react-dom": "18.2.7",
     "apexcharts": "3.41.1",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.7.9",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "lodash": "4.17.21",
