--- a/package/package.json
+++ b/package/package.json
@@ -34,7 +34,9 @@
     "react-apexcharts": "1.4.1",
     "react-dom": "18.2.0",
     "react-helmet-async": "1.3.0",
+    "react-icons": "^5.4.0",
     "react-mui-sidebar": "^1.3.8",
+    "react-toastify": "^11.0.3",
     "tailwindcss": "^4.0.0",
     "typescript": "5.1.6"
   },
